[tool.poetry]
name = "dht22-exporter"
version = "0.1.1"
description = "DHT22 Prometheus Exporter"
authors = ["Ayres Fonseca <ayres.fonseca@yahoo.ca>"]
license = "GPL v3.0"
readme = "README.md"
packages = [{include = "dht22_exporter"}]

[tool.poetry.dependencies]
python = "^3.9"
adafruit-circuitpython-dht = "^4.0.3"
prometheus-client = "^0.19.0"


[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
pylint = "^3.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
